# AndroidStudy

./: .gitignore  README.md  build.gradle  compileTimeCost.gradle  config.gradle  gradle.properties  jenkinsfile  settings.gradle
app/: CMakeLists.txt  build.gradle  multidex-config.pro  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: person.json
app/src/main/cpp/: native-lib.c  native-lib.cpp
app/src/main/kotlin/org.ninetripods.mq.study/: ViewPager2Activity.kt  ViewPager2Adapter.kt  ViewPager2Fragment.kt
app/src/main/res/anim/: anim_icon.xml  push_scale_in.xml  push_scale_left_in.xml  push_scale_left_out.xml  push_scale_out.xml  push_scale_right_in.xml  push_scale_right_out.xml  push_top_translate_in.xml  push_top_translate_out.xml  view_alpha.xml  view_animation_set.xml  view_rotate.xml  view_scale.xml  view_translate.xml
app/src/main/res/color/: popup_color.xml
app/src/main/res/drawable/: add_circle.xml  btn_selector_done.xml  btn_selector_tb_search.xml  btn_selector_undo.xml  cart.xml  chat_ask_message_progress_loading.xml  chat_ask_text_item_bg.xml  chat_reply_card_inner_item_bg.xml  chat_reply_more_action_item_bg.xml  chat_reply_text_item_bg.xml  corner_bg_gray.xml  drawable_default_error.xml  exit.xml  explode_anim.xml  ic_moon.xml  ic_star_outline.xml  icon_vector.xml  item_danmu_bg.xml  list.xml  loading_frame_translate.xml  mail.xml  pic_load_more_corner.xml  popup_corner.xml  popup_corner_down.xml  popup_corner_top.xml  popup_grey_bg.xml  popup_item_bg.xml  power.xml  (+4 more)
app/src/main/res/drawable-v21/: icon_vector_anim.xml
(+842 files in other folders)
